Fix register page alignment

--- a/styles/register.scss
+++ b/styles/register.scss
@@ -64,7 +64,7 @@ a:hover{
   top: 10%;
   width:150%;
   height:auto;
-
+  right:110px;
 }
 .form-control{
   background-color: #f8f9fa;
